[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/Weapons/0031MissileC.png" type="Texture" id=1]
[ext_resource path="res://src/Weapons/ClusterMissile.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.66921

[node name="ClusterMissile" type="KinematicBody2D"]
position = Vector2( 0.5, 0 )
script = ExtResource( 2 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.529732, -0.0331078 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="LifeSpan" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="LifeSpan" to="." method="_on_LifeSpan_timeout"]
